--- a/pages/lecture-question.html
+++ b/pages/lecture-question.html
@@ -10,100 +10,11 @@
 	<!-- Library -->
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
 	<script src="../js/jquery.cookie.js">	</script>
-	
 	<!-- JS -->
-	<script type='text/javascript'>
-		var questionID = getParameterByName("questionID");
-		var week= getParameterByName("week");
-		var courseID = getParameterByName("courseID");
-		var cookieQuestion=$.cookie(week).split(",");
-
-	$(document).ready(function() {
-		$.ajax({//retrieve JSON through ajax, if the parameter(courseID) from url is wrong, noting shows
-			type: 'GET',
-			url: '../uqDrawBackend/getQuestion.php?courseID='+courseID+'&questionID='+questionID,
-			success: function(data){
-				//alert(data);
-				//alert("success");
-				var questionsListObject = JSON.parse(data);
-				document.getElementById("code").textContent=questionsListObject.enteringCode;// 3 digit code
-				//document.getElementById("subject").textContent=questionsListObject.subject;// course code
-				document.getElementById("question-title").textContent=questionsListObject.questionList[0].title;
-
-			},
-			error: function(){
-				console.log(data);
-				alert('There was an error adding your comment');
-			}
-		});
-		console.log(cookieQuestion);
-		if(cookieQuestion.indexOf(questionID)<cookieQuestion.length-1){
-			document.getElementById("nextButton").innerHTML= "<button class='q-button' onclick='btnNext()'>Next</button>";
-		}
-
-
-
-	});
-	function getParameterByName(name) { // get url parameter
-		name = name.replace(/[\[]/, "\\[").replace(/[\]]/, "\\]");
-		var regex = new RegExp("[\\?&]" + name + "=([^&#]*)"),
-				results = regex.exec(location.search);
-		return results === null ? "" : decodeURIComponent(results[1].replace(/\+/g, " "));
-	}
-		function btnEnd(){
-			var questionID = getParameterByName("questionID");
-			$.ajax({
-				type: "POST",
-				url: "../uqDrawBackend/askQuestion.php",
-				data: {
-					questionID: questionID,
-					status: 0,
-				}
-			}).done(function (data) {
-				//alert(data);//get result from php
-				window.location.href = "../pages/lecture-questions.html?courseID="+getParameterByName("courseID");
-			   });	
-
-			
-		}
-		function btnViewResponses(){
-			window.location.href = "../pages/lecture-responses.html?questionID="+getParameterByName("questionID")+"&courseID="+getParameterByName("courseID");
-		}
-	function btnNext(){
-		btnEnd();
-		var nextQ= cookieQuestion[cookieQuestion.indexOf(questionID)+1];
-		window.location.href = 'lecture-question.html?courseID='+courseID+'&questionID='+nextQ+'&week='+week;
-	}
-
-	function startTimer(duration, display) {
-    	var timer = duration, minutes, seconds;
-    	setInterval(function () {
-        	minutes = parseInt(timer / 60, 10);
-        	seconds = parseInt(timer % 60, 10);
-
-        	minutes = minutes < 10 ? "0" + minutes : minutes;
-        	seconds = seconds < 10 ? "0" + seconds : seconds;
-
-        	display.text(minutes + ":" + seconds);
-
-        	if (--timer < 0) {
-            	timer = 0;
-            	btnEnd();
-        		}
-    		}, 1000);
-	}
-
-	jQuery(function ($) {
-    	var twoMinutes = 60 * 4,
-        display = $('#time-left');
-    startTimer(twoMinutes, display);
-});
-
-</script>
+	<script type='text/javascript' src="../js/pageJS/lecture-question.js"></script>
 </head>
 
 <body>
-	<!-- Header -->
 	<section>
 		<div class="header-l-prepare">
 		<div class="headerpos">
@@ -114,7 +25,6 @@
 
 	<!-- Questions -->
 	<section>
-
 		<!-- Instructions (step 1 and step 2) -->
 		<div class="instruction-container"><h3 class="question-instruct">For Students:</h3> <h3 class="question-instruct"> Goto <span class="question-goto">teamone.uqcloud.net</span> </h3>
 		 <h3 class="question-instruct"> Enter code <span class="question-goto" id = "code"> 9ag </span> </h3></div>
@@ -122,28 +32,19 @@
 		<!-- The question goes here, get id question -->
 		<h2 class="instruction-question">Question: <span id="question-title">Draw My House with a purple window and the sun shining outside</span> </h2>
 
-		<!-- RESPONSE FILLER -->
 		<!-- This works by increasing the inner divs width, so grab
 		theme-response-inner and change the width accordinly -->
 		<div class="timer-div">
-			
 			<div class="theme-timer"> </div>
-			
 		</div>
 		<div class="theme-time2"><p>4 minutes</p> </div>
 		<div class="theme-time15"><p>3 minutes</p> </div>
 		<div class="theme-time1"><p>2 minutes</p> </div>
 		<div class="theme-time05"><p>1 minute</p> </div>
-		
-		
-		
+
 		<div class="theme-response-actions">
-
-
-			<!-- Enter PHP values in the spans -->
 			<!--<h2> Responses <span id="responses">23</span> </h2> -->
 			<h2> Time: <span id="time-left">04:00</span></h2>
-
 			<!-- Buttons -->
 			<button class="q-button-long" onclick="btnViewResponses()">View Responses</button>
 			<button class="q-button" onclick="btnEnd()">End</button>
