--- a/pages/lecture-subjects.html
+++ b/pages/lecture-subjects.html
@@ -1,52 +1,55 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>UQ Draw</title>
-  <!-- CSS -->
-  <link rel="stylesheet" href="../css/main.css">
-  <link rel="stylesheet" href="../css/vendor/gridism.css">
-  <!-- Sets it as a mobile viewport if the user is on a mobile device -->
-  <meta name="viewport" content="width=device-width,initial-scale=1">
-  <link href='https://fonts.googleapis.com/css?family=Open+Sans:700,600,400' rel='stylesheet' type='text/css'>
-  <!-- Library -->
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
+    <title>UQ Draw</title>
+    <!-- CSS -->
+    <link rel="stylesheet" href="../css/main.css">
+    <link rel="stylesheet" href="../css/vendor/gridism.css">
+    <!-- Sets it as a mobile viewport if the user is on a mobile device -->
+    <meta name="viewport" content="width=device-width,initial-scale=1">
+    <link href='https://fonts.googleapis.com/css?family=Open+Sans:700,600,400' rel='stylesheet' type='text/css'>
+    <!-- Library -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
 
-	<!-- JS -->
-	<script>
-  		 // DISRESPECT
- 
-  		 $(document).ready(function() {
-  		 	$("#subjects").load("../uqDrawBackend/subListForALecturer.php");
-  		 });
-  	</script>
+    <!-- JS -->
+    <script>
+        $(document).ready(function () {
+            $("#subjects").load("../uqDrawBackend/subListForALecturer.php");
+        });
+    </script>
 </head>
 <body class="bg-lecture">
 
-	<section>
-		<div class="header-l-lecture">
-			<div class="headerpos">
-			<img class='images-l-subjects' src="../assets/images/topbar-logo.png" alt=""/>
-			<h3 class="typography-l-h3"> Lecture Mode </h3>
-			</div>
-			<a href="lecture-prepare.html"><div class="button-goto-prepare"> <p> goto Prepare Mode </p></div></a>
-			<a href="lecture-mode.html"><div class="button-back-lecture-response"> <p> Back </p></div></a>
-		</div>
-	</section>
+<section>
+    <div class="header-l-lecture">
+        <div class="headerpos">
+            <img class='images-l-subjects' src="../assets/images/topbar-logo.png" alt=""/>
 
-	<section class="list-subject">
+            <h3 class="typography-l-h3"> Lecture Mode </h3>
+        </div>
+        <a href="lecture-prepare.html">
+            <div class="button-goto-prepare"><p> goto Prepare Mode </p></div>
+        </a>
+        <a href="lecture-mode.html">
+            <div class="button-back-lecture-response"><p> Back </p></div>
+        </a>
+    </div>
+</section>
 
-		<!-- Body Heading -->
-		<h2 class="type-body-heading"> Subjects </h2>
-		<!-- Body Subheading -->
-		<h3 class="type-body-subheading"> Select subject below</h3>
-		<!-- List the subjects -->
-		<ul class = "list-subjects-purple">
-			<!--<li> <span class="subject"> Subject 1 </span> </lI>-->
-			<div id = "subjects"></div>	
-		</ul>
+<section class="list-subject">
 
-	</section>
+    <!-- Body Heading -->
+    <h2 class="type-body-heading"> Subjects </h2>
+    <!-- Body Subheading -->
+    <h3 class="type-body-subheading"> Select subject below</h3>
+    <!-- List the subjects -->
+    <ul class="list-subjects-purple">
+        <!--<li> <span class="subject"> Subject 1 </span> </lI>-->
+        <div id="subjects"></div>
+    </ul>
+
+</section>
 
 </body>
-	
+
 </html>
