lots of commenting added

--- a/pages/lecture-question.html
+++ b/pages/lecture-question.html
@@ -27,10 +27,10 @@
 	<section>
 		<!-- Instructions (step 1 and step 2) -->
 		<div class="instruction-container"><h3 class="question-instruct">For Students:</h3> <h3 class="question-instruct"> Goto <span class="question-goto">teamone.uqcloud.net</span> </h3>
-		 <h3 class="question-instruct"> Enter code <span class="question-goto" id = "code"> 9ag </span> </h3></div>
+		 <h3 class="question-instruct"> Enter code <span class="question-goto" id = "code"> <!--9ag --></span></h3></div>
 		
 		<!-- The question goes here, get id question -->
-		<h2 class="instruction-question">Question: <span id="question-title">Draw My House with a purple window and the sun shining outside</span> </h2>
+		<h2 class="instruction-question">Question: <span id="question-title"><!--Draw My House with a purple window and the sun shining outside</span> </h2>-->
 
 		<!-- This works by increasing the inner divs width, so grab
 		theme-response-inner and change the width accordinly -->
