--- a/pages/lecture-questions.html
+++ b/pages/lecture-questions.html
@@ -30,7 +30,7 @@
 		<!-- Instructions (step 1 and step 2) -->
 		<div class="student-intruct">
 		<div class="instruction-container"><h3> For Students: </h3><div class="circle-number"><p>1</p></div> <h3> Goto <span>teamone.uqcloud.net</span> </h3>
-<div class="circle-number code"><p>2</p></div> <h3> Enter code <span id = "code"> 9ag </span> </h3></div>
+<div class="circle-number code"><p>2</p></div> <h3> Enter code <span id = "code"><!-- 9ag --></span> </h3></div>
 		</div>
 		<ul><span id="questionsList">
 
